# terminal-arcade

./: LICENSE  README.md  aquarium.py  ascii_art.py  ascii_zoo.py  blackjack.py  calculator.py  catpet.py  clock.py  conway3d.py  darts.py  dna.py  dungeon.py  figlet.py  fluid.py  forest.py  fractal.py  galaxy.py  game2048.py  git_report.html  git_stats.py  globe.py  kaleidoscope.py  launcher.py  life.py  lissajous.py  magnetic.py  matrix.py  maze.py  mdview.py  minesweeper.py  music_viz.py  paint.py  particles.py  passgen.py  piano.py  pong.py  pyproject.toml  rpg_battle.py  runner.py  (+10 more)
docs/: index.html
terminal_arcade/: __init__.py  ascii_art.py  blackjack.py  calculator.py  catpet.py  fluid.py  game2048.py  globe.py  life.py  matrix.py  maze.py  minesweeper.py  music_viz.py  particles.py  snake.py  space_shooter.py  tetris.py  typing_test.py
